# community-analytics-platform

./: .env.example  .gitignore  README.md  dcinside_today_2026-03-11.json  docker-compose.yml  index.html  tmp_arca_detail.txt  tmp_arca_probe.json  tmp_home.html  tmp_home_after_arca.html
backend/: .env.example  Dockerfile  alembic.ini  korean_live.db  korean_live_app.db  korean_live_filtered.db  korean_live_run.db  market_signal_hub.db  market_signal_hub.db.bak_20260312_015340  pyproject.toml  verify_run.db  verify_run2.db  verify_seed.db  verify_seed2.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0001_initial.py  0002_politics.py  0003_community_post_metadata.py
backend/app/: __init__.py  main.py
backend/app/analytics/: base.py  entity_topic.py  keywords.py  lexicons.py  llm_analyzer.py  openai_community.py  rule_based.py  snapshots.py
backend/app/analytics/lexicons/: fear_terms.txt  greed_terms.txt  hate_terms.txt  negative_terms.txt  positive_terms.txt  stopwords.txt  uncertainty_terms.txt
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/db/: base.py  models.py  session.py
backend/app/jobs/: __init__.py  registry.py  runner.py  scheduler.py
backend/app/models/: __init__.py  article.py  community.py  domain.py  indicator.py  ingestion.py  reference.py  sentiment.py
backend/app/politics/: __init__.py
backend/app/schemas/: analytics.py  common.py  community.py  indicator.py  jobs.py  market.py  news.py
backend/app/services/: analysis_service.py  article_clustering.py  community_analysis.py  content_filters.py  deduplication.py  ingestion.py  market.py  market_intraday.py  market_summary.py  query.py  seed.py  storage.py  text_cleaner.py  text_processor.py
backend/app/utils/: json.py  text.py
backend/scripts/: import_dcinside_history.py  reanalyze_community_since.py  run_job.py  seed.py
backend/tests/: conftest.py  test_api.py  test_community_api.py  test_dcinside_connector.py  test_llm_analyzer.py  test_models.py  test_rule_based.py  test_text_utils.py
backend/tests/analytics/: test_content_filters.py  test_rule_based.py  test_text_cleaner.py
backend/tests/api/: test_api.py
backend/tests/collectors/: test_collectors.py
backend/tests/db/: test_models.py
(+235 files in other folders)
