[project]
name = "market-signal-hub-backend"
version = "0.1.0"
description = "Market Signal Hub backend API, collectors, analytics, and scheduler."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.1",
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "fastapi>=0.115.8",
  "httpx>=0.28.1",
  "openai>=1.68.2",
  "psycopg[binary]>=3.2.5",
  "pydantic-settings>=2.7.1",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.38",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.7",
]

[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
